cmake_minimum_required(VERSION 3.12)
SET(CMAKE_C_COMPILER g++)
add_compile_options(-std=c++11)

project(Queue&Stack)

add_executable(circular_queue circular_queue.cpp)
add_executable(count_islands count_islands.cpp)
add_executable(open_lock open_lock.cpp)
add_executable(perfect_squares perfect_squares.cpp)
add_executable(min_stack min_stack.cpp)
add_executable(valid_parentheses valid_parentheses.cpp)
add_executable(daily_temperatures daily_temperatures.cpp)
add_executable(evalRPN evalRPN.cpp)
add_executable(cout_islands_dfs cout_islands_dfs.cpp)
add_executable(clone_graph clone_graph.cpp)
add_executable(target_sum target_sum.cpp)
add_executable(binary_tree_inorder_traversal binary_tree_inorder_traversal.cpp)
add_executable(implement_queue_using_stack implement_queue_using_stack.cpp)
add_executable(implement_stack_using_queue implement_stack_using_queue.cpp)
add_executable(decoder_string decoder_string.cpp)