add_executable(circular_queue circular_queue.cpp)
add_executable(count_islands count_islands.cpp)
add_executable(open_lock open_lock.cpp)
add_executable(perfect_squares perfect_squares.cpp)
add_executable(min_stack min_stack.cpp)
add_executable(valid_parentheses valid_parentheses.cpp)
add_executable(daily_temperatures daily_temperatures.cpp)
add_executable(evalRPN evalRPN.cpp)
add_executable(cout_islands_dfs cout_islands_dfs.cpp)
add_executable(clone_graph clone_graph.cpp)
add_executable(target_sum target_sum.cpp)
add_executable(binary_tree_inorder_traversal binary_tree_inorder_traversal.cpp)
add_executable(implement_queue_using_stack implement_queue_using_stack.cpp)
add_executable(implement_stack_using_queue implement_stack_using_queue.cpp)
add_executable(decoder_string decoder_string.cpp)
add_executable(flood_fill flood_fill.cpp)
add_executable(01_matrix 01_matrix.cpp)
add_executable(keys_and_rooms keys_and_rooms.cpp)